# prompt-optimizer-platform

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  verify_engine_imports.py
.agent/rules/: README.md  architecture.md  conventions.md  workflow.md
backend/: .env.example  database.py  llm_factory.py  main.py  migrate_intervention_records.py  migrate_to_sqlite.py  models.py  optimizer.py  prompts.py  requirements.txt  storage.py  task_manager.py  test_connection.py  test_extraction_feature.py  test_history_formatting.py  verify_imports.py
backend/app/: main.py  models.py
backend/app/core/: http_client.py  llm_factory.py  prompts.py
backend/app/db/: database.py  storage.py
backend/app/engine/: __init__.py  advanced_diagnosis.py  (+12 more)
backend/optimizer_engine/: __init__.py  advanced_diagnosis.py  cancellation.py  candidate_generator.py  diagnosis.py  hard_case_detection.py  intent_analyzer.py  knowledge_base.py  multi_intent_optimizer.py  multi_strategy.py  prompt_evaluator.py  prompt_rewriter.py  strategy_matcher.py  validation.py
backend/routers/: auto_iterate.py  config.py  global_models.py  knowledge_base.py  playground.py  projects.py  tasks.py  upload.py
backend/scripts/: db_health_check.py  migrate_to_sqlite.py
backend/tests/: test_error_history.py  test_hard_case.py  test_openai_api.py  verify_extraction.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
tests/: test_global_models_protocol.py  test_http_client.py  test_model_verification.py  test_optimizer_refactor.py  test_retry.py
(+115 files in other folders)
