[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-optimizer-platform"
version = "0.1.0"
description = "A platform for prompt optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Developer"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "openpyxl",
    "pydantic",
    "openai",
    "python-multipart",
    "python-dotenv",
    "loguru",
    "scikit-learn",
    "numpy",
    "networkx",
    "starlette",
    "sqlmodel",
    "aiosqlite",
    "torch",
    "text2vec"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]